...
    return CupertinoAlertDialog(
      key: const Key('markDetail_dialog_cancelConfirm'),
      title: const Text('変更を破棄しますか？'),
      content: const Text('保存されていない変更は失われます。'),
      actions: [
        CupertinoDialogAction(
          key: const Key('markDetail_button_discardConfirm'),
          isDestructiveAction: true,
          onPressed: () => context
              .read<MarkDetailBloc>()
              .add(const MarkDetailCancelDiscardConfirmed()),
          child: const Text('破棄する'),
        ),
...
